fixed a bug that prevented guild card sub header text from being visible

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -109,7 +109,8 @@ body {
 
 /*----------------3d cards----------------*/
 .card-background {
-    background-color: #2c2c2c;
+  /*  background-color: #2c2c2c;
+    z-index: -3;*/
 }
 
 .coverCards {
